[gd_scene load_steps=34 format=3 uid="uid://c1m10h0sqogy0"]

[ext_resource type="Script" uid="uid://ct4qu1fvownnc" path="res://Scripts/Demon.gd" id="1_u8kdg"]
[ext_resource type="Texture2D" uid="uid://sk7jqj6ywg58" path="res://Assets/OurAssets/Sprites/DemonSquare.png" id="2_7pn5h"]
[ext_resource type="Texture2D" uid="uid://3yytflo6x3sw" path="res://Assets/OurAssets/Sprites/DemonDeath.png" id="3_040qw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ku7m"]
atlas = ExtResource("2_7pn5h")
region = Rect2(256, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_748kp"]
atlas = ExtResource("2_7pn5h")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjha3"]
atlas = ExtResource("2_7pn5h")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_162li"]
atlas = ExtResource("2_7pn5h")
region = Rect2(256, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhx2d"]
atlas = ExtResource("2_7pn5h")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqhpx"]
atlas = ExtResource("2_7pn5h")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc1bc"]
atlas = ExtResource("2_7pn5h")
region = Rect2(256, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qey5"]
atlas = ExtResource("2_7pn5h")
region = Rect2(0, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6kdc"]
atlas = ExtResource("2_7pn5h")
region = Rect2(128, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywd1k"]
atlas = ExtResource("2_7pn5h")
region = Rect2(256, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxvw0"]
atlas = ExtResource("2_7pn5h")
region = Rect2(0, 320, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_868kw"]
atlas = ExtResource("2_7pn5h")
region = Rect2(128, 320, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo656"]
atlas = ExtResource("3_040qw")
region = Rect2(0, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y038n"]
atlas = ExtResource("3_040qw")
region = Rect2(128, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7chon"]
atlas = ExtResource("3_040qw")
region = Rect2(256, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipsli"]
atlas = ExtResource("3_040qw")
region = Rect2(384, 256, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mox44"]
atlas = ExtResource("3_040qw")
region = Rect2(0, 320, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2grkf"]
atlas = ExtResource("3_040qw")
region = Rect2(128, 320, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i0q7"]
atlas = ExtResource("3_040qw")
region = Rect2(256, 320, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv6l7"]
atlas = ExtResource("3_040qw")
region = Rect2(384, 320, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdcgt"]
atlas = ExtResource("3_040qw")
region = Rect2(0, 384, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvxk2"]
atlas = ExtResource("3_040qw")
region = Rect2(128, 384, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxi84"]
atlas = ExtResource("3_040qw")
region = Rect2(256, 384, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jult3"]
atlas = ExtResource("2_7pn5h")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj8ey"]
atlas = ExtResource("2_7pn5h")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u76k1"]
atlas = ExtResource("2_7pn5h")
region = Rect2(128, 64, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ac8c6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ku7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_748kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjha3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_162li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhx2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqhpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc1bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qey5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6kdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywd1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxvw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_868kw")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y038n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7chon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipsli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mox44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2grkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i0q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv6l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdcgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvxk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxi84")
}],
"loop": false,
"name": &"Death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jult3")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj8ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u76k1")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i4afg"]
radius = 14.0357

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1w5m"]
size = Vector2(55, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cckmm"]
size = Vector2(28, 29)

[node name="Demon" type="CharacterBody2D"]
scale = Vector2(1.01055, 1.02221)
script = ExtResource("1_u8kdg")

[node name="DemonSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(21.77, -4.891)
sprite_frames = SubResource("SpriteFrames_ac8c6")
animation = &"Attack"
autoplay = "Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 1)
shape = SubResource("CircleShape2D_i4afg")

[node name="HitboxDemon" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="HitboxCollisionDemon" type="CollisionShape2D" parent="HitboxDemon"]
unique_name_in_owner = true
position = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_w1w5m")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="HurtboxCollisionDemon" type="CollisionShape2D" parent="Hurtbox"]
unique_name_in_owner = true
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_cckmm")

[connection signal="animation_finished" from="DemonSprite" to="." method="_on_demon_sprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
